# crucible

./: .gitignore  CLAUDE.md  RESEARCH.md  pyproject.toml
crucible/adapters/: base.py
crucible/adapters/security/: prompt_injection.py
crucible/data/: loaders.py
crucible/experiments/configs/: base.yaml
tests/: test_adapters.py
